# QtProjects

./: .gitignore
CheckableHeaderViewAdapter/: CMakeLists.txt  EnumConverters.h  checkableheaderviewadapter.cpp  checkableheaderviewadapter.h  depechemodel.cpp  depechemodel.h  main.cpp
ColumnContentResizeAdapter/: CMakeLists.txt  columncontentresizeadapter.cpp  columncontentresizeadapter.h  main.cpp
HeaderRowInView/: CMakeLists.txt  depechemodel.cpp  depechemodel.h  enums.h  main.cpp  qtableviewwithinlineheaders.cpp  qtableviewwithinlineheaders.h  qtreeviewwithinlineheaders.cpp  qtreeviewwithinlineheaders.h
HeaderSorting/: CMakeLists.txt  headersortingadapter.cpp  headersortingadapter.h  main.cpp
QTableViewWithHeader/: CMakeLists.txt  depechemodel.cpp  depechemodel.h  main.cpp  tableviewwithheader.cpp  tableviewwithheader.h
StretchingTableViews/: CMakeLists.txt  main.cpp
creationalPatternFactory/: CMakeLists.txt  housecat.h  main.cpp
creationalPatternFactory/cats/: cat.cpp  cat.h  catfactory.cpp  catfactory.h  housecat.cpp  housecat.h  leopard.cpp  leopard.h  trashcat.cpp  trashcat.h
creationalPatternFactory/interfaces/: iAnimal.h  iAnimalFactory.h
groupsOfStates/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
poolDesign/: CMakeLists.txt  main.cpp
poolDesign/interfaces/: iPool.h  iPoolItem.h
poolDesign/pools/: mypool.cpp  mypool.h  mypoolitem.cpp  mypoolitem.h
